forth/test/fail/test_const_fold_mod_zero.af
use' ../../lang.af
fun: .test_const_fold_mod_zero { -- out } 29 0 .mod end
